<?php die(); ?>
Akeeba Panopticon 1.1.0
================================================================================
+ Dashboard layout for Sites Overview [gh-395]
+ Change the rotated log names [gh-398]
~ Running `composer install` will now always create the `version.php` file
# [LOW] PHP error when the browser returns invalid data during WebAuthn [gh-406]

Akeeba Panopticon 1.0.7
================================================================================
# [HIGH] Error when your PHP version is out of date [gh-392]
# [HIGH] “You do not seem to have Akeeba Backup Professional installed.” viewing some sites

Akeeba Panopticon 1.0.6
================================================================================
+ Connection Doctor [gh-345]
+ Site notes [gh-363]
~ Improve login language selection [gh-367]
~ Translations now use PO files instead of a third party service
~ Light and Dark Mode for the TinyMCE and ACE editors
# [HIGH] Wrong assignment of sites to groups if there are gaps in numbering [gh-360]
# [MEDIUM] No fallback to English if the browser, user configuration, and global configuration don't include it [gh-368]
# [MEDIUM] No TinyMCE editor when using the `.htaccess` file
# [LOW] SMTP Authentication radio always appears disabled when loading System Configuration [gh-390]

Akeeba Panopticon 1.0.5
================================================================================
+ Scheduled Available Update Summary Emails [gh-301]
+ Detect stuck extension updates and allow rescheduling, or canceling [gh-304]
+ Allow immediate email sending [gh-306]
+ Allow the global update preference of an extension to be "email" [gh-309]
+ Detect when scheduled tasks are falling behind [gh-315]
+ Site configuration management CLI commands [gh-153]
+ Collection and display of basic server information [gh-307]
+ Per-user language preference [gh-326]
+ Groups act as tags for site filtering [gh-333]
+ Automatic API data sanitization [gh-341]